Fixing home images on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,4 +189,9 @@ border-top: #061830 10px solid;
   h1 {
     font-size: 60px;
   }
+    
+  .homeImages{
+    margin-bottom: 1em;
+  }
+  
 }
